# neptune-theme

./: README.md  build.sh  test-theme.sh
src/: meson.build
src/neptune-dark/: index.theme  meson.build
src/neptune-dark/gnome-shell/: assets  gnome-shell.scss  meson.build  pad-osd.css
src/neptune-dark/gnome-shell/sass/: _colors.scss  _common.scss  _drawing.scss  _widgets.scss  widgets
src/neptune-dark/gtk-2.0/: meson.build
src/neptune-dark/gtk-3.0/: _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  assets  gtk-dark.scss  meson.build
src/neptune-light/: index.theme  meson.build
src/neptune-light/gnome-shell/: gnome-shell.scss  meson.build
src/neptune-light/gtk-2.0/: meson.build
src/neptune-light/gtk-3.0/: meson.build
